<resources>
    <string name="app_name">KotlinLogin&amp;register</string>
    <string name="hotel">Hotel</string>
    <string name="booking">Booking</string>

    <string name="register">REGISTER</string>

    <string name="login_email_hint">Email</string>

    <string name="login_password_hint">Password</string>

    <string name="signup_login_hint">Already have an account? Sign In</string>

    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>


    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="user_name">User Name</string>
    <string name="email_idd">Email Id</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="registerr">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_as_a_teacher">Login As a Teacher</string>

    <string name="new_user_register_now">New user? Register Now</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="idteacher">ID</string>
    <string name="passwordteacher">Password</string>

    <string name="registerbtn">Register</string>

    <string name="standard">Standard</string>
    <string name="div">Div</string>

    <string name="add_student">Add Student</string>
    <string name="add_task">Add Task</string>
    <string name="english">English</string>
    <string name="maths">Maths</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="add_task1">Add Task</string>
    <string name="student_name">Student Name</string>
    <string name="idstudent">ID</string>

    <string name="login_as_a_student">Login As a Student</string>
    <string name="student_naame">Student Name</string>
    <string name="assignments">Assignments</string>
    <string name="upload_assignments">Upload Assignments</string>
</resources>