<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/school6"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="30sp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/themeColor"
                    android:text="Already \nhave an \nAccount?" />
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <Button
                android:id="@+id/Loginasteacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_as_a_teacher"
                android:background="@drawable/button_background_blue"
                android:layout_gravity="center"
                android:textColor="@color/whiteTextColor">

            </Button>

            <Button
                android:id="@+id/loginasstudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_as_a_student"

                android:background="@drawable/button_background_blue"
                android:layout_gravity="center"
                android:textColor="@color/whiteTextColor">

            </Button>

            <TextView
                android:id="@+id/register_txt"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"

                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addstudent"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Add student"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>