<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/school6"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".Student.StudentLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20sp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/themeColor"
                    android:text="Student\nLogin." />
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout

                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/studentloginname"
                    style="@style/modifiedEditText"
                    android:hint="@string/student_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/studentloginid"
                    style="@style/modifiedEditText"
                    android:hint="@string/idstudent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <Button
                android:id="@+id/studentlogin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_as_a_student"
                android:layout_gravity="center"
                android:background="@drawable/button_background_blue"
                android:textColor="@color/whiteTextColor">

            </Button>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>